--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,26 @@
 
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta charset="utf-8">
+<title>CryptoNoter In-Browser Javascript XMR miner</title>
+<meta name="description" content="In-Browser Javascript XMR miner for websites / Payout towards personal XMR wallet. Built for in-browser javascript mining on any Monero pools. 0% Commission. 100% Payout" />
+<link rel="image_src" href="" />
+
+<meta property="og:title" content="CryptoNoter In-Browser Javascript XMR miner"/>
+<meta property="og:description" content="In-Browser Javascript XMR miner for websites / Payout towards personal XMR wallet. Built for in-browser javascript mining on any Monero pools. 0% Commission. 100% Payout"/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://www.cryptonoter.com"/>
+<meta property="og:image" content="https://www.cryptonoter.com/img/logo-large.png"/>
+<meta property="og:site_name" content="cryptonoter.com"/>
+<link rel="shortcut icon" href="https://www.cryptonoter.com/img/favicon-32x32.png" />
+</head>
+
+<body style="font-family: Arial;border: 0 none;">
+
+<div align='center' style='margin-top:100px;'>
+<img src='https://www.cryptonoter.com/img/logo-600.png' />
+</div>
+</body>
+</html>
