--- a/web/demo.html
+++ b/web/demo.html
@@ -5,19 +5,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>CryptoNoter - Javascript Browser XMR Mining Script</title>
-	<style>
-img {
-    display: inline-block;
-    width: 25%; // Show 4 images in a row normally
-    height: auto;
-}
+	<title>CryptoNoter - Open Source In-Browser Javascript Web Miner</title>
+	<meta name="description" content="Open Source In-Browser Javascript Web Miner For Websites / Support XMR & ETN Coins. Built for in-browser javascript mining on any Monero (XMR) or Electroneum (ETN) pools. 0% Commission. Payout Towards Personal Wallet" />
+	<link rel="image_src" href="https://www.cryptonoter.com/img/logo-square.jpg" />
 
-@media (max-width: 600px) {
-  img {
-    width: 100%; // Override width to show only one image in a row on smaller screens
-  }
-}	</style>
+	<meta property="og:title" content="CryptoNoter - Open Source In-Browser Javascript Web Miner"/>
+	<meta property="og:description" content="Open Source In-Browser Javascript Web Miner For Websites / Support XMR & ETN Coins. Built for in-browser javascript mining on any Monero (XMR) or Electroneum (ETN) pools. 0% Commission. Payout Towards Personal Wallet"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://www.cryptonoter.com"/>
+	<meta property="og:image" content="https://www.cryptonoter.com/img/logo-square.jpg"/>
+	<meta property="og:site_name" content="cryptonoter.com"/>
+	<link rel="shortcut icon" href="https://www.cryptonoter.com/img/favicon-32x32.png" />
+
 	<script src="https://www.cryptonoter.com/processor.js"></script>
 	<script>
 		var addr = 'CryptoNoter';
@@ -55,8 +54,8 @@ img {
 
 <body style="font-family: Arial;border: 0 none;">
 
-<div align='center' style='margin-top:100px;'>
-<img src='https://www.cryptonoter.com/img/logo-600.png' /><br /><br />
+<div align='center' style='margin-top:30px;'>
+<img src='https://www.cryptonoter.com/img/logo-300.png' /><br /><br />
 <table cellpadding= '5' cellspacing='0'style='margin-bottom:80px;font-size:16px;' />
 <tr>
 	<td width='150' align='left' valign='top' style='border-bottom: 1px solid #d6d5d5;'>
@@ -87,7 +86,19 @@ img {
 	</td>
 </tr>
 </table>
-<a href='https://github.com/cryptonoter/CryptoNoter' />CryptoNoter's Repository at Github</a>
+
+<div style='margin-top:0px;margin-bottom:20px;font-size:14px;'>
+<b>Updates & Developments</b><br />
+<b>18/12/17: CryptoNoter Now Support Both Monero (XMR) & Electroneum (ETN) Coins</b>
+</div>
+
+<img src='https://www.cryptonoter.com/img/monero-logo.png' />
+<img src='https://www.cryptonoter.com/img/electroneum-logo.png' />
+
+<br /><br /><br />
+
+<a href='https://www.facebook.com/cryptonoter/' />Follow Me at Facebook</a> | <a href='https://www.twitter.com/cryptonoter/' />Follow Me at Twitter</a>
+| <a href='https://github.com/cryptonoter/CryptoNoter' />CryptoNoter's Repository at Github</a>
 </div>
 
 </body>
