--- a/web/index.html
+++ b/web/index.html
@@ -1,26 +1,40 @@
 
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="utf-8">
-<title>CryptoNoter In-Browser Javascript XMR miner</title>
-<meta name="description" content="In-Browser Javascript XMR miner for websites / Payout towards personal XMR wallet. Built for in-browser javascript mining on any Monero pools. 0% Commission. 100% Payout" />
-<link rel="image_src" href="" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>CryptoNoter - Open Source In-Browser Javascript Web Miner<</title>
+<meta name="description" content="Open Source In-Browser Javascript Web Miner For Websites / Support XMR & ETN Coins. Built for in-browser javascript mining on any Monero (XMR) or Electroneum (ETN) pools. 0% Commission. Payout Towards Personal Wallet" />
+<link rel="image_src" href="https://www.cryptonoter.com/img/logo-square.jpg" />
 
-<meta property="og:title" content="CryptoNoter In-Browser Javascript XMR miner"/>
-<meta property="og:description" content="In-Browser Javascript XMR miner for websites / Payout towards personal XMR wallet. Built for in-browser javascript mining on any Monero pools. 0% Commission. 100% Payout"/>
+<meta property="og:title" content="CryptoNoter - Open Source In-Browser Javascript Web Miner<"/>
+<meta property="og:description" content="Open Source In-Browser Javascript Web Miner For Websites / Support XMR & ETN Coins. Built for in-browser javascript mining on any Monero (XMR) or Electroneum (ETN) pools. 0% Commission. Payout Towards Personal Wallet"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://www.cryptonoter.com"/>
-<meta property="og:image" content="https://www.cryptonoter.com/img/logo-large.png"/>
+<meta property="og:image" content="https://www.cryptonoter.com/img/logo-square.jpg"/>
 <meta property="og:site_name" content="cryptonoter.com"/>
 <link rel="shortcut icon" href="https://www.cryptonoter.com/img/favicon-32x32.png" />
 </head>
 
 <body style="font-family: Arial;border: 0 none;">
 
-<div align='center' style='margin-top:100px;'>
-<img src='https://www.cryptonoter.com/img/logo-600.png' />
+<div align='center' style='margin-top:30px;'>
+<img src='https://www.cryptonoter.com/img/logo-300.png' />
+
+<div style='margin-top:30px;margin-bottom:20px;font-size:14px;'>
+<b>Updates & Developments</b><br />
+<b>18/12/17: CryptoNoter Now Support Both Monero (XMR) & Electroneum (ETN) Coins</b>
+</div>
+
+<img src='https://www.cryptonoter.com/img/monero-logo.png' />
+<img src='https://www.cryptonoter.com/img/electroneum-logo.png' />
+
+<br /><br /><br />
+
+<a href='https://www.facebook.com/cryptonoter/' />Follow Me at Facebook</a> | <a href='https://www.twitter.com/cryptonoter/' />Follow Me at Twitter</a>
+| <a href='https://github.com/cryptonoter/CryptoNoter' />CryptoNoter's Repository at Github</a>
 </div>
 </body>
 </html>
