--- a/web/demo.html
+++ b/web/demo.html
@@ -89,12 +89,14 @@
 
 <div style='margin-top:0px;margin-bottom:20px;font-size:14px;'>
 <b>Updates & Developments</b><br />
-<b>18/12/17: CryptoNoter Now Support Both Monero (XMR) & Electroneum (ETN) Coins</b>
+<b>19/12/17: CryptoNoter Now Support ByteCoin (BCN) Coin</b><br />
+<b>18/12/17: CryptoNoter Now Support Both Monero (XMR) & Electroneum (ETN) Coins</b><br />
+<b>17/12/17: Use pool.cryptonoter.com:1111 for javascript web mining</b>
 </div>
 
 <img src='https://www.cryptonoter.com/img/monero-logo.png' />
 <img src='https://www.cryptonoter.com/img/electroneum-logo.png' />
-
+<img src='https://www.cryptonoter.com/img/bytecoin-logo.png' />
 <br /><br /><br />
 
 <a href='https://www.facebook.com/cryptonoter/' />Follow Me at Facebook</a> | <a href='https://www.twitter.com/cryptonoter/' />Follow Me at Twitter</a>
