--- a/web/demo.html
+++ b/web/demo.html
@@ -99,6 +99,7 @@
 <img src='https://www.cryptonoter.com/img/bytecoin-logo.png' />
 <br /><br /><br />
 
+<a href='https://www.cryptonoter.com/demo.php' />Try CryptoNoter Demo</a> |
 <a href='https://www.facebook.com/cryptonoter/' />Follow Me at Facebook</a> | <a href='https://www.twitter.com/cryptonoter/' />Follow Me at Twitter</a>
 | <a href='https://github.com/cryptonoter/CryptoNoter' />CryptoNoter's Repository at Github</a>
 </div>
