--- a/web/demo.html
+++ b/web/demo.html
@@ -87,11 +87,11 @@
 </tr>
 </table>
 
-<div style='margin-top:0px;margin-bottom:20px;font-size:14px;'>
+<div style='margin-top:0px;margin-bottom:20px;font-size:16px;'>
 <b>Updates & Developments</b><br />
-<b>19/12/17: CryptoNoter Now Support ByteCoin (BCN) Coin</b><br />
-<b>18/12/17: CryptoNoter Now Support Both Monero (XMR) & Electroneum (ETN) Coins</b><br />
-<b>17/12/17: Use pool.cryptonoter.com:1111 for javascript web mining</b>
+19/12/17: CryptoNoter Now Support ByteCoin (BCN) Coin<br />
+18/12/17: CryptoNoter Now Support Both Monero (XMR) & Electroneum (ETN) Coins<br />
+17/12/17: Use pool.cryptonoter.com:1111 for javascript web mining
 </div>
 
 <img src='https://www.cryptonoter.com/img/monero-logo.png' />
@@ -99,8 +99,8 @@
 <img src='https://www.cryptonoter.com/img/bytecoin-logo.png' />
 <br /><br /><br />
 
+<a href='https://www.cryptonoter.com/demo.php' />Try CryptoNoter Demo</a> | <a href='https://pool.cryptonoter.com' />Join My Monero Mining Pool</a> | <a href='https://github.com/cryptonoter/CryptoNoter' />CryptoNoter's Repository at Github</a><br /><br />
 <a href='https://www.facebook.com/cryptonoter/' />Follow Me at Facebook</a> | <a href='https://www.twitter.com/cryptonoter/' />Follow Me at Twitter</a>
-| <a href='https://github.com/cryptonoter/CryptoNoter' />CryptoNoter's Repository at Github</a>
 </div>
 
 </body>
