--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>CryptoNoter - Open Source In-Browser Javascript Web Miner<</title>
-<meta name="description" content="Open Source In-Browser Javascript Web Miner For Websites / Support XMR & ETN Coins. Built for in-browser javascript mining on any Monero (XMR) or Electroneum (ETN) pools. 0% Commission. Payout Towards Personal Wallet" />
+<title>CryptoNoter - In-Browser Javascript Web Miner<</title>
+<meta name="description" content="In-Browser Javascript Web Miner For Websites / Support XMR & ETN Coins. Built for in-browser javascript mining on any Monero (XMR) or Electroneum (ETN) pools. 0% Commission. Payout Towards Personal Wallet" />
 <link rel="image_src" href="https://www.cryptonoter.com/img/logo-square.jpg" />
 
 <meta property="og:title" content="CryptoNoter - Open Source In-Browser Javascript Web Miner<"/>
